fix the font of joinus-text, still working on the spacing

--- a/styles/site.css
+++ b/styles/site.css
@@ -726,15 +726,18 @@ main .image-flex-container {
   width: 75vw;
   height: 40vh;
   margin-bottom: 100px;
-  padding-bottom: 50px;
+  padding-bottom: 20px;
+  padding-top: 0px;
+  background-color: #007bff;
 }
 
 .joinus-text {
-
   text-align: left;
-  font-size: 24px;
+  font-size: 22px;
   letter-spacing: 1px;
   padding-left: 70px;
+  padding-top: 0px;
+  background-color: #DABDAD;
 }
 
 
